hphp/test/zend/good/Zend/tests/bug43344_8.php
<?hh
namespace Foo;
function f($a=varray[namespace\bar]) :mixed{
    return $a[0];
}
<<__EntryPoint>> function main(): void {
echo f()."\n";
}
